fix(ShareMenu): rtl spacing of share url input

--- a/assets/scripts/menus/ShareMenu.scss
+++ b/assets/scripts/menus/ShareMenu.scss
@@ -32,6 +32,11 @@ $share-menu-width: 350px;
   line-height: 18px;
   margin-right: 0.5em;
   outline: none;
+
+  [dir="rtl"] & {
+    margin-right: auto;
+    margin-left: 0.5em;
+  }
 }
 
 .share-sign-in-promo {
